# yoshino-radio

./: .gitignore  Cargo.toml  Gemfile  Procfile  README.md  app.rb  config.ru
cores/: Cargo.toml
cores/src/: ipc.rs  lib.rs
extension/: Cargo.toml  Makefile
extension/src/: channel_server.rs  extension_app.rs  extension_context.rs  main.rs  message.rs  slack_client.rs
src/: main.rs  slack_events.rs
web/: Cargo.toml  Makefile
web/src/: channel_client.rs  main.rs  runtime_app.rs  runtime_context.rs  slack_events.rs  slack_messages.rs  slack_requests.rs  slack_verification.rs
worker/: Cargo.toml  Makefile
worker/src/: buffer_stream.rs  completions.rs  images.rs  main.rs  message.rs  openai_client.rs  slack_client.rs
