[package]
name = "yoshino-radio"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.deploy]
env_file = ".env.production"

[dependencies]
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

serde = "*"
serde_json = "*"
hmac = "*"
sha2 = "*"
hex = "*"

anyhow = "*"
