[package]
name = "yoshino-radio"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.deploy]
env_file = ".env.production"

[dependencies]
cores = { path = "../cores" }

lambda-extension = "0.8"
serde = "1"
tokio = { version = "1", features = ["macros", "rt", "net", "io-util"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

tokio-util = { version = "0.7.10", features = ["rt"] }
anyhow = "1.0.75"
serde_json = "1.0.108"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
