[package]
name = "yoshino-radio-worker"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.deploy]
env_file = ".env.production"

[dependencies]

lambda_runtime = "0.8.3"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

tokio-util = { version = "0.7.10", features = ["rt"] }
anyhow = "1.0.75"
serde_json = "1.0.108"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls", "stream"] }

cores = { path = "../cores" }
futures-util = { version = "0.3.0", default-features = false }
